# lok-buch

./: Cargo.toml
db-test-data/: lokbuch.db  lokbuch.db-shm  lokbuch.db-wal
migrations/: 20241117120439_lok-database.sql  20241123102940_lok-database-enhacement.sql  20250116160213_lok-database-enhancement.sql
res/locales/: de.yml  en.yml
src/: app.rs  backend.rs  database.rs  main.rs  res_man.rs  ui.rs
src/app/: backend.rs  message.rs  page.rs  persistent_data.rs  settings.rs  state.rs  stored_data.rs  ui.rs
src/app/backend/: database.rs  resource_manager.rs  sqlite_backend.rs
src/app/backend/database/: lok.rs  preview_lok.rs  sqlite_db.rs
src/app/backend/test/: util.rs
src/app/page/: add_page.rs  edit_page.rs  home_page.rs  loading_page.rs  settings_page.rs  show_page.rs
src/app/settings/: languages.rs
src/app/ui/: widgets.rs
src/backend/: database.rs  resource_manager.rs  sqlite_backend.rs
src/backend/database/: lok.rs  preview_lok.rs  sqlite_db.rs
src/backend/test/: util.rs
src/database/: lok.rs  preview_lok.rs  sqlite_db.rs
src/frontend/: font.rs  widgets.rs
src/ui/: widgets.rs
